# agentic-framework

./: .gitignore  404.html  CITATION.cff  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml  test.ipynb
.githooks/: post-commit
COMPARISON/: index.html
EVIDENCE/: index.html
PRE_PUBLISH_CHECKLIST/: index.html
agentic_framework/: graph.py  node.py  state.py
agentic_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic_framework/nodes/: __init__.py  agent_node.py  decision_node.py
agentic_framework/tools/: rag_tool.py
api-notes/: index.html
api/advanced/llmnode/: index.html
api/advanced/routernode/: index.html
api/advanced/tools/: index.html
api/advanced/validation/: index.html
api/advanced/wiring/: index.html
api/graph/agenticgraph/: index.html
coming-from-langgraph/: index.html
demo/: README.md  app.py  requirements.txt
docs/: COMPARISON.md  project.md
examples/: index.html  panel.py  sample_usage.py  vs_langgraph.md  vs_langgraph.py
examples/architectures/: index.html
examples/basics/: index.html
examples/nlp/: README.md  doc_triage.py  extract_summarize.py  rag_qa.py
getting-started/: index.html
node-types/: index.html
paper/: VIDEO_SCRIPT.md  main.tex  refs.bib
pttai/: graph.py  validation.py
pttai/nodes/: agent_node.py
quickstart/: index.html
search/: search_index.json
state/: index.html
tests/: conftest.py  test_agent_loop.py  test_interrupt_resume.py  test_invoke_shorthand.py  test_multikey_io.py  test_rag.py  test_validator_fixes.py
validator/: index.html
(+7 files in other folders)
